--- a/shop-all.html
+++ b/shop-all.html
@@ -28,7 +28,7 @@
         <div class="col-md-3">
           <div class="card border-0" style="width: 18rem;">
             <img src="{{this.image}}" class="card-img-top shop-image" alt="{{this.image}}">
-            <div class="card-body">
+            <div class="card-body text-center">
               <h4 class="card-title">{{this.description}}</h4>
               <p class="card-text">{{this.price}}</p>
               {{#if sale}}
