--- a/shop-all.html
+++ b/shop-all.html
@@ -8,8 +8,9 @@
   <title>Popular Bouquets</title>
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Merriweather&family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <!-- Bootstrap -->
@@ -85,7 +86,11 @@
   </script>
 </head>
 
-<body style="background-image: url('Images/background/back-3.jpg') !important; background-size: cover; background-position: center top; background-attachment: fixed;">
+<body style="
+background-image: url('Images/background/back-3.jpg'); 
+background-size: cover; 
+background-position: center top; 
+background-attachment: fixed;">
 
   <header class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -171,8 +176,7 @@
       </div>
     </div>
   </div>
-
-
+  
   <!-- Footer -->
   <footer class="container-fluid text-center mt-3">
     <p>
@@ -181,9 +185,6 @@
 
   </footer>
 
-
-  
-  
   <script src="Script/script.js"></script>
   <script src="Script/shop-all.js"></script>
 </body>
